@@ -12,6 +12,7 @@
     * 4371 FIX: Dashboards: Folder filtered globe dashlets now link to filtered views
     * 4382 FIX: Views: Silently ignore configured but not existing view filters
     * 4383 FIX: Fixed broken "tiled" host view with German localized GUI
+    * 4384 FIX: Fixed exception on start page when using Python < 2.5...
 
     WATO:
     * 4373 FIX: Timeperiods: iCal events with multiple days can now be imported
